<resources>
    <string name="app_name">After-Hour</string>

    // Permissions
    <string name="permission_reason_camera">In order to Scan QR Codes After-Hour needs access to your camera!</string>

    // Buttons
    <string name="button_cancel">Cancel</string>
    <string name="button_okay">Okay</string>

    // Titel
    <string name="title_codescanner">Code Scanner</string>
    <string name="title_myprofile">My Profile</string>

    // Navigation Bar
    <string name="navigation_drawer_open">Öffnen</string>
    <string name="navigation_drawer_close">Schliessen</string>
    <string name="events">Events</string>
    <string name="logout">Logout</string>

    // Placeholders
    <string name="placeholder_event_title">Event Title</string>
    <string name="placeholder_event_location">Event Location</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_event_picture">Event Picture</string>
    <string name="placeholder_text">Nothing to read.</string>
    <string name="descr_afterhour_icon">After-Hour Icon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Party Hard!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="date_of_birth">Date of Birth: </string>
    <string name="placeholder_event_description">Event Description</string>
    <string name="wrong_login_credentials">Wrong username or password</string>

    <!-- strings related to profile-->
    <string name="firstname">First name</string>
    <string name="name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="passwords_not_equal">Passwords are not equal</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="employee_login">Employee Login</string>
    <string name="user_login">User Login</string>
    <string name="profile">Profile</string>
    <string name="coatcheck">Coat Check</string>
    <string name="dummy_text">Dummy text</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dummy_userid">USR-ZRH-000000</string>
    <string name="last_name">Last name</string>
    <string name="creditcard">Credit Card</string>
    <string name="employee">Employee</string>

    <!-- Strings related to bottom bar-->
    <string name="billing">Billing</string>
    <string name="drinks">Drinks</string>
    <string name="autologin">Autologin</string>

    <!-- Strings related to scanned user -->
    <string name="no_valid_scanned_user_detected">No valid scanned user detected</string>
    <string name="scan_user_id">Please Scan a Users QR-ID</string>
    <string name="scan_coat_check">Please Scan a Coat Check</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="async_task_timeout">The request took too long and was cancelled.</string>
    <string name="async_task_error">There was an error retrieving the data.</string>
    <string name="empty_coatcheck_list">There are no coatchecks at the moment. If you want to add a coatcheck, please give your Jacket to the wardrobe, and click on the red Button below.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="buy_ticket_success_message">Ticket bought - Enjoy your visit</string>
    <string name="buy_ticket_failed_message">We\'re sorry, there was an error buying your ticket.</string>
    <string name="dashboard_card_title">Events coming up</string>
</resources>
