<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transaction_item_view"
    android:layout_width="match_parent"
    android:layout_height="184dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/placeholder_event_title"/>

                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/placeholder_event_location"/>

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/placeholder_event_description"/>

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/double_text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/placeholder_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/event_image_view"
                    android:contentDescription="@string/placeholder_event_picture"
                    android:layout_width="@dimen/event_picture_width"
                    android:layout_height="@dimen/event_picture_height"
                    android:layout_gravity="end"
                    card_view:srcCompat="@mipmap/qrcode_sample"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
